kubernetes/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ika-web
  name: ika-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ika-web
  template:
    metadata:
      labels:
        app: ika-web
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: gcr.io/formation-mac-298810/ika-web:latest
        name: ika-web
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /ready
            port: 5001
          initialDelaySeconds: 15
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /alive
            port: 5001
          initialDelaySeconds: 20
          periodSeconds: 5
      - name: envoy
        image: envoyproxy/envoy:v1.16-latest
        command: ["envoy"]
        args: ["-c", "/etc/envoy.yaml", "--service-cluster", "$(POD_NAME)"]
        volumeMounts:
        - name: envoy-yaml
          mountPath: /etc/envoy.yaml
          subPath: envoy.yaml
      volumes:
      - name: envoy-yaml
        configMap:
          name: flask-envoy
      restartPolicy: Always
