kubernetes/ika-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.production.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ika-db
  name: ika-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ika-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.production.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: ika-db
    spec:
      containers:
        - image: ika-db
          name: ika-db
          ports:
            - containerPort: 27017
          resources: {}
      restartPolicy: Always
status: {}
