kubernetes/ika-streamer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.production.yml
    kompose.version: 1.22.0 (HEAD)
  labels:
    io.kompose.service: ika-streamer
  name: ika-streamer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ika-streamer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.production.yml
        kompose.version: 1.22.0 (HEAD)
      labels:
        io.kompose.service: ika-streamer
    spec:
      containers:
        - image: ika-streamer
          name: ika-streamer
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      restartPolicy: Always
status: {}
