kubernetes/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ika-web
  labels:
    app: ika-web
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 5001
  selector:
    app: ika-web
