kubernetes/ika-classifier-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.production.yml
    kompose.version: 1.22.0 (HEAD)
  labels:
    io.kompose.service: ika-classifier
  name: ika-classifier
spec:
  type: LoadBalancer
  ports:
    - name: "8004"
      port: 8004
      targetPort: 8000
  selector:
    io.kompose.service: ika-classifier
